更新token情况，但是自动登录和检查依旧有问题
