# docs/swagger.yaml
@@ -108,8 +108,7 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/models.User'
+          schema: {}
       summary: get current login user
       tags:
       - Auth
@@ -312,6 +311,34 @@ paths:
           schema:
             type: error
       summary: Update an existing question
+      tags:
+      - Questions
+  /api/v1/questions/page:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a paginated list of all existing questions
+      parameters:
+      - description: Page number (default is 1)
+        in: query
+        name: page
+        type: integer
+      - description: Number of items per page (default is 10)
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Question'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: error
+      summary: Get all questions with pagination
       tags:
       - Questions
   /api/v1/questionsubmit:
